--- a/estilo/partials/page-landing.css
+++ b/estilo/partials/page-landing.css
@@ -110,15 +110,17 @@
     grid-area: proffy;
     text-align: initial;
     align-self: center;
+    margin:0;
 }
 
 .logo-container img{
-    height:100%
+    height:127px;
 }
 
 
 .hero-image{
     grid-area: image;
+    height: 350px;
 }
 .buttons-container{
     grid-area:button;
